--- a/smartcoin/public/css/nice-select.css
+++ b/smartcoin/public/css/nice-select.css
@@ -107,7 +107,7 @@
             transform: scale(0.75) translateY(-21px);
     -webkit-transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
     transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
-    z-index: 9; }
+    z-index: 90; }
     .nice-select .list:hover .option:not(:hover) {
       background-color: transparent !important; }
   .nice-select .option {
@@ -186,7 +186,7 @@
     margin-top: 5px;
     top: 100%;
     left: 0;
-    z-index: 8;
+    z-index: 80;
     padding: 5px;
     background: #FFF;
     opacity: 0;
@@ -223,7 +223,7 @@
 
 .nice-select.open .nice-select-search-box {
     opacity: 1;
-    z-index: 10;
+    z-index: 100;
     pointer-events: auto;
     -webkit-transform: scale(1) translateY(0);
     -ms-transform: scale(1) translateY(0);
